--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,3 +11,36 @@ body{
 	border-radius: 0;
 	border: 0;
 }
+#logo-img {
+   background: url('https://mzobe456.github.io/Module2_solution/858ccfe6291fc8d-a-nw-p.jpg') no-repeat;
+   width: 150px;
+   height: 150px;
+   margin: 5px 5px 0px 0;
+}
+
+.navbar-brand {
+   padding-top:25px;	
+}
+
+.navbar-brand h1{
+   font-family: 'lora', serif;
+   color: #557c3e;
+   font-size: 1.5e;
+   text-transform: uppercase;
+   font-weight: bold;
+   text-shadow: 1px 1px 1px #222;
+   margin-top: 0;
+   margin-bottum: 0;
+   line-heiht: .75;
+}
+.navbar-brand a:hover, .navbae-brand a:focus {
+   text-decoration: none;
+}
+.navbar-brand p { /* Naruto */
+   color: #000;
+   font-size: .7em;
+   margin-top: 15px;
+}
+.navbar-brand p span { /* Shippuden */
+   vertical-align: middle'
+}
