--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ body{
 	border: 0;
 }
 #logo-img {
-   background: url('https://mzobe456.github.io/Module2_solution/858ccfe6291fc8d-a-nw-p.jpg') no-repeat;
+   background: url('https://pin.it/1oz2pqY') no-repeat;
    width: 150px;
    height: 150px;
    margin: 5px 5px 0px 0;
