--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,9 +12,9 @@ body{
 	border: 0;
 }
 #logo-img {
-   background: url('https://github.com/Mzobe456/Module2_solution/blob/gh-pages/4ceec92b201ab7b-a-nw-p.jpg') no-repeat;
-   width: 800px;
-   height: 500px;
+/**   background: url('') no-repeat; **/
+   width: 150px;
+   height: 150px;
    margin: 5px 5px 0px 0;
 }
 
