--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,9 +12,9 @@ body{
 	border: 0;
 }
 #logo-img {
-/**   background: url('') no-repeat; **/
-   width: 150px;
-   height: 150px;
+   background: url('https://github.com/Mzobe456/Module2_solution/blob/gh-pages/275077-naruto-itachi-headband.png') no-repeat;
+   width: 200px;
+   height: 200px;
    margin: 5px 5px 0px 0;
 }
 
