--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ body{
 }
 
 .navbar-brand {
-   padding-top:5px;	
+   padding-top:25px;	
 }
 
 .navbar-brand h1{
@@ -36,14 +36,11 @@ body{
 .navbar-brand a:hover, .navbae-brand a:focus {
    text-decoration: none;
 }
-.navbar-brand p { /* Naruto */
+#navbar-brand p { /* Naruto */
    color: #000;
    font-size: .7em;
-   margin-top: 15px;
-   
+   margin-top: 15px;   
 }
 .navbar-brand p span { /* Shippuden */
    vertical-align: middle;
-   font-size: 3px;
-   line-height: .75
 }
