--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,6 @@ body{
 
 .navbar-brand {
    padding-top:25px;	
-   height: 150px;
 }
 
 .navbar-brand h1{
@@ -37,7 +36,7 @@ body{
 .navbar-brand a:hover, .navbae-brand a:focus {
    text-decoration: none;
 }
-#navbar-brand p { /* Naruto */
+.navbar-brand p { /* Naruto */
    color: #000;
    font-size: .7em;
    margin-top: 15px;   
