--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ body{
 #nav-list {
    margin-top: 10px;
 }
-#nav-list a{
+#nav-list a {
    color: #951C49;
    text-align: center;
 }
@@ -64,7 +64,7 @@ body{
 }
 #phone a {
    text-align: right;
-   padding-tottom: 0;
+   padding-bottom: 0;
 }
 #phone div {
    color: #557c3e;
