--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,3 +70,6 @@ body{
    text-align: right;
    paddding-right: 15px; 
 }
+.navbar-hearder button.navbar-toggle, .navbar-header .icon-bar {
+   boarder: 1px solid #61122f
+}
