--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,7 +89,7 @@ body{
 /********* Meduam devices only ********/
 @media (min_width:992px) and (max-width: 1199px) {
 	#logo-img {
-	  /*backgrond: url('100x100 image') no-repeat;*/
+	  backgrond: url('100x100 image') no-repeat;
 	  width: 50px;
 	  height: 50px;
 	  margin: 4px 4px 4px 0;
